--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ SPOTIFY_CLIENT_SECRET=YOUR_SPOTIFY_CLIENT_SECRET
 TELEGRAM_BOT_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
 CHANNEL_ID=YOUR_CHANNEL_ID
 TARGET_MESSAGE_ID=YOUR_TARGET_MESSAGE_ID
+SPOTIFY_USERNAME = "your_spotify_username"
