--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-SPOTIFY_CLIENT_ID=YOUR_SPOTIFY_CLIENT_ID
-SPOTIFY_CLIENT_SECRET=YOUR_SPOTIFY_CLIENT_SECRET
-TELEGRAM_BOT_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
-CHANNEL_ID=YOUR_CHANNEL_ID
-TARGET_MESSAGE_ID=YOUR_TARGET_MESSAGE_ID
-SPOTIFY_USERNAME = "your_spotify_username"
+SPOTIFY_CLIENT_ID=your_client_id
+SPOTIFY_CLIENT_SECRET=your_client_secret
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token
+CHANNEL_ID=your_channel_id
+TARGET_MESSAGE_ID=your_target_message_id
+BOT_URL=your_bot_url
+SPOTIFY_USERNAME=your_spotify_username  # Add your Spotify username here
