--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ CHANNEL_ID=your_channel_id
 TARGET_MESSAGE_ID=your_target_message_id
 BOT_URL=your_bot_url
 SPOTIFY_USERNAME=your_spotify_username  # Add your Spotify username here
+REDIRECT_URI=http://localhost:8888/callback  # Add your redirect URI here
