--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-SPOTIFY_CLIENT_ID=your_client_id
-SPOTIFY_CLIENT_SECRET=your_client_secret
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token
-CHANNEL_ID=your_channel_id
-TARGET_MESSAGE_ID=your_target_message_id
-BOT_URL=your_bot_url
-SPOTIFY_USERNAME=your_spotify_username  # Add your Spotify username here
-REDIRECT_URI=http://localhost:8888/callback  # Add your redirect URI here
+SPOTIFY_CLIENT_ID=6cca6244b0f94f00bdc79e5a2863817b
+SPOTIFY_CLIENT_SECRET=f451f446d058480fb11b01d0f2aab1bc
+TELEGRAM_BOT_TOKEN=7478757732:AAHqObrvRqFg17BwuoMCL5Cy8VyojKdUQ0E
+CHANNEL_ID=1002319959540
+TARGET_MESSAGE_ID=2
+BOT_URL=https://officiallymono.github.io/Telepotify/
+SPOTIFY_USERNAME=31ahyhpqshvgaprpk2xshxfnspfe
+REDIRECT_URI=http://localhost:8888/callback
