--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ SPOTIFY_CLIENT_SECRET=f451f446d058480fb11b01d0f2aab1bc
 TELEGRAM_BOT_TOKEN=7478757732:AAHqObrvRqFg17BwuoMCL5Cy8VyojKdUQ0E
 CHANNEL_ID=1002319959540
 TARGET_MESSAGE_ID=2
-BOT_URL=https://officiallymono.github.io/Telepotify/
+BOT_URL=https://t.me/planetshnaggybot
 SPOTIFY_USERNAME=31ahyhpqshvgaprpk2xshxfnspfe
 REDIRECT_URI=http://localhost:8888/callback
