--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ TARGET_MESSAGE_ID=2
 SPOTIFY_USERNAME=31ahyhpqshvgaprpk2xshxfnspfe
 REDIRECT_URI=http://localhost:8889/callback
 BOT_URL=https://t.me/planetshnaggybot
+API_ID=27042773
+API_HASH=c0cfae0388612f6006c83a735718778f
