--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-SPOTIFY_CLIENT_ID=6cca6244b0f94f00bdc79e5a2863817b
-SPOTIFY_CLIENT_SECRET=f451f446d058480fb11b01d0f2aab1bc
+SPOTIFY_CLIENT_ID=31f7ecea97344ee99a0bdf99e2d43e7b
+SPOTIFY_CLIENT_SECRET=ac6acd1999d04f4db05ae00cd286bb3e
 TELEGRAM_BOT_TOKEN=7478757732:AAHqObrvRqFg17BwuoMCL5Cy8VyojKdUQ0E
 CHANNEL_ID=-1002319959540
 TARGET_MESSAGE_ID=2
-REDIRECT_URI=http://localhost:8889/callback
+REDIRECT_URI=http://5.75.202.115:8889
 BOT_URL=https://t.me/planetshnaggybot
 API_ID=27042773
 API_HASH=c0cfae0388612f6006c83a735718778f
